# nextsync

./: .gitignore  Cargo.toml  README.md
docs/: store.md
docs/commands/: push.md
docs/conventions/: variables.md
src/: commands.rs  main.rs  services.rs  store.rs  subcommands.rs  utils.rs
src/commands/: add.rs  clone.rs  config.rs  init.rs  pull.rs  push.rs  remote_diff.rs  reset.rs  status.rs
src/commands/push/: copied.rs  deleted.rs  modified.rs  moved.rs  new.rs  new_dir.rs  push_factory.rs  rm_dir.rs
src/global/: global.rs
src/services/: api.rs  api_call.rs  copy.rs  create_folder.rs  delete_path.rs  details.rs  download_files.rs  downloader.rs  list_folders.rs  login.rs  move.rs  req_props.rs  request_manager.rs  upload_file.rs
src/store/: gconfig.rs  head.rs  index.rs  object.rs
src/store/object/: blob.rs  tree.rs
src/subcommands/: add.rs  clone.rs  config.rs  init.rs  pull.rs  push.rs  remote_diff.rs  reset.rs  status.rs
src/utils/: api.rs  config.rs  head.rs  index.rs  into.rs  nextsyncignore.rs  object.rs  path.rs  read.rs  remote.rs  time.rs
tests/: main.sh  utils.sh
tests/add/: directory.sh  file.sh
