[package]
name = "nextsync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["stream", "json", "multipart"] }
tokio = { version = "1", features = ["full"] }
dotenv ="0.15.0" 
clap = "2.33"
rust-crypto = "0.2.36"
colored = "2.0.0"
xml-rs = "0.8.0"
regex = "1.8.3"
lazy_static = "1.4.0"
glob = "0.3.1"
textwrap = "0.13"
chrono = "0.4.26"
indicatif = "0.17.5"
md5 = "0.7.0"
futures-util = "0.3.28"

[profile.release]
debug = true
